--- a/css/styles.css
+++ b/css/styles.css
@@ -553,9 +553,11 @@ img {
 }
 
 .footer-btn {
+  min-width: 165px;
+  height: 40px;
   color: #fff;
   text-align: center;
-  font-family: Roboto;
+  font-family: Roboto, sans-serif;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
@@ -567,11 +569,11 @@ img {
   padding: 8px 24px;
   justify-content: center;
   align-items: center;
-  gap: 16px;
 }
 
 .footer-icon-btn {
   fill: #ffffff;
+  margin-left: 16px;
 }
 
 /*========================*/
@@ -588,6 +590,8 @@ img {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .is-open {
@@ -607,7 +611,7 @@ img {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-  padding: 24px;
+  padding: 73px 24px 24px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -656,7 +660,7 @@ img {
 }
 
 .modal-field {
-  margin-bottom: 18px;
+  margin-bottom: 8px;
 }
 
 .modal-label {
@@ -675,6 +679,7 @@ img {
   border: 1px solid rgba(46, 47, 66, 0.4);
   padding-left: 38px;
   outline: transparent;
+  background-color: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -691,6 +696,8 @@ img {
 }
 
 .modal-icon {
+  width: 18px;
+  height: 24px;
   fill: #2e2f42;
   position: absolute;
   left: 16px;
@@ -699,14 +706,23 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.modal-field-comment {
+  margin-bottom: 16px;
+}
+
 .modal-textarea {
   width: 100%;
   height: 120px;
+  color: rgba(46, 47, 66, 0.4);
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
   border-radius: 4px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   padding: 8px 16px;
   outline: transparent;
   resize: none;
+  background-color: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -715,10 +731,10 @@ img {
 }
 
 .modal-textarea::placeholder {
-  color: rgba(46, 47, 66, 0.4);
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.04em;
+}
+
+.modal-field-check {
+  margin-bottom: 24px;
 }
 
 .check-text {
@@ -731,12 +747,12 @@ img {
   margin-bottom: 24px;
 }
 
-.check-text a {
+.privacy-link {
   color: #4d5ae5;
   text-decoration-line: underline;
 }
 
-.check-text span {
+.check-part {
   width: 16px;
   height: 16px;
   border: 1px solid rgba(46, 47, 66, 0.4);
@@ -752,7 +768,7 @@ img {
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-check:checked + .check-text span {
+.form-check:checked + .check-part {
   background-color: #404bbf;
   border: none;
   fill: #d9d9d9;
