--- a/css/styles.css
+++ b/css/styles.css
@@ -540,6 +540,10 @@ img {
   height: 40px;
   border-radius: 4px;
   border: 1px solid #fff;
+  color: #fff;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   padding: 8px 16px;
   background-color: transparent;
@@ -547,9 +551,6 @@ img {
 
 .footer-input::placeholder {
   color: #fff;
-  font-size: 12px;
-  line-height: 2;
-  letter-spacing: 0.04em;
 }
 
 .footer-btn {
@@ -611,7 +612,7 @@ img {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-  padding: 73px 24px 24px;
+  padding: 72px 24px 24px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -696,8 +697,6 @@ img {
 }
 
 .modal-icon {
-  width: 18px;
-  height: 24px;
   fill: #2e2f42;
   position: absolute;
   left: 16px;
