--- a/css/styles.css
+++ b/css/styles.css
@@ -741,8 +741,6 @@ img {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
-  display: flex;
-  align-items: center;
   margin-bottom: 24px;
 }
 
@@ -767,7 +765,7 @@ img {
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-check:checked + .check-part {
+.form-check:checked + .check-text.check-part {
   background-color: #404bbf;
   border: none;
   fill: #d9d9d9;
