--- a/css/styles.css
+++ b/css/styles.css
@@ -765,7 +765,7 @@ img {
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-check:checked + .check-text.check-part {
+.form-check:checked .check-part {
   background-color: #404bbf;
   border: none;
   fill: #d9d9d9;
