--- a/css/styles.css
+++ b/css/styles.css
@@ -768,7 +768,7 @@ img {
 .form-check:checked + .check-text .check-part {
   background-color: #404bbf;
   border: none;
-  fill: #d9d9d9;
+  fill: #f4f4fd;
 }
 
 .modal-btn {
